# mlops_template

./: .gitignore  README.md  cookiecutter.json  diagram.drawio
hooks/: post_gen_project.py
{{ cookiecutter.repo_name }}/: .env  .gitignore  Makefile  pyproject.toml  requirements.txt  requirements_dev.txt
{{ cookiecutter.repo_name }}/.devcontainer/: Dockerfile  devcontainer.json  devcontainer.json.template
{{ cookiecutter.repo_name }}/dockerfiles/: Dockerfile  dev.dockerfile  docker-compose.yml  docker-compose.yml.template  train.dockerfile
{{ cookiecutter.repo_name }}/src/{{ cookiecutter.module_name }}/: config.py  train.py
{{ cookiecutter.repo_name }}/src/{{ cookiecutter.project_name }}/: __init__.py  config.py  data.py  evaluate.py  train.py  visualize.py
