[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = {{ cookiecutter.project_name|tojson }}
version = "0.0.1"
description = {{ cookiecutter.description|tojson }}
authors = [
  { name = {{ cookiecutter.author_name|tojson }}, email = "your@email.com" },
]
{% if cookiecutter.open_source_license != 'No license file' %}license = { file = "LICENSE" }{% endif %}
keywords = ["machine learning", "data science"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">={{ cookiecutter.python_version }}"

dependencies = [
  "torch==2.5.1",
  "torch-tb-profiler==0.4.3",
  "typer==0.15.1",
  "loguru==0.7.3",
  "python-dotenv==1.0.1",
  "tqdm==4.67.1",
  "typer==0.15.1",
]

[project.optional-dependencies]
dev = [
  "ipykernel==6.29.5",
  "pre-commit==4.1.0",
  "pytest==8.3.4",
  "coverage==7.6.9",
  "black==25.1.0",
  "mkdocs==1.6.1",
  "mkdocs-material==9.4.6",
  "mkdocstrings-python==1.12.2",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["{{ cookiecutter.project_name }}*"]

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint]
select = ["I", "N", "E", "W", ]

[tool.coverage.run]
omit = ["tests/*"]
